# AuthenticationUsignDjango

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
authen/: settings.py  urls.py
notes/: models.py  serializers.py  urls.py  views.py
notes/migrations/: 0001_initial.py
users/: serializers.py  urls.py  views.py
